fixed for smartcharts x-axis overflowing

--- a/src/sass/app_2/_common/layout/layouts.scss
+++ b/src/sass/app_2/_common/layout/layouts.scss
@@ -21,12 +21,16 @@
                 top: 0;
                 left: 0;
 
-                div.chartContainer {
-                    background: transparent;
-                    min-height: 100%;
-                }
-                div.cq-chart-controls {
-                    box-shadow: none;
+                div.ciq-chart {
+                    height: calc(100% - 50px);
+
+                    div.chartContainer {
+                        background: transparent;
+                        min-height: 100%;
+                    }
+                    div.cq-chart-controls {
+                        box-shadow: none;
+                    }
                 }
             }
             div.debug-text {
